Base: Support dark mode in version page
(cherry picked from commit 21c537345616e2a0d7f49e74b8c6fa8c1466e33d)

--- a/Base/res/ladybird/templates/version.html
+++ b/Base/res/ladybird/templates/version.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <title>About %browser_name%</title>
     <style>
+        /* FIXME: We should be able to remove the HTML style when "color-scheme" is supported */
+        @media (prefers-color-scheme: dark) {
+            html {
+                background-color: rgb(20, 20, 20);
+                color: rgb(235, 235, 235);
+            }
+        }
         img {
             float: left;
             image-rendering: pixelated;
