Base: Use % for keys in templates
The previous character used, @, conflicted with CSS. % is used by other
templating engines, and doesn't conflict with language features (e.g.
media queries).

(cherry picked from commit 27f3305b8774e96553ac8e81a2a83d8a0f1d044c)

--- a/Base/res/ladybird/templates/version.html
+++ b/Base/res/ladybird/templates/version.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About @browser_name@</title>
+    <title>About %browser_name%</title>
     <style>
         img {
             float: left;
@@ -20,32 +20,32 @@
 <body>
     <header>
         <img src="resource://icons/32x32/app-browser.png">
-        <h1>About @browser_name@</h1>
+        <h1>About %browser_name%</h1>
     </header>
     <table>
         <tr>
             <th>Version:</th>
-            <td>@browser_version@</td>
+            <td>%browser_version%</td>
         </tr>
         <tr>
             <th>Arch:</th>
-            <td>@arch_name@</td>
+            <td>%arch_name%</td>
         </tr>
         <tr>
             <th>Operating System:</th>
-            <td>@os_name@</td>
+            <td>%os_name%</td>
         </tr>
         <tr>
             <th>User Agent:</th>
-            <td>@user_agent@</td>
+            <td>%user_agent%</td>
         </tr>
         <tr>
             <th>Command Line:</th>
-            <td>@command_line@</td>
+            <td>%command_line%</td>
         </tr>
         <tr>
             <th>Executable Path:</th>
-            <td>@executable_path@</td>
+            <td>%executable_path%</td>
         </tr>
     </table>
 </body>
