LibPDF+PDFViewer+MacPDF: Add an option to disable using global alpha
This disables global alpha for all things that currently support it:
Images, paths, and text.

"Global alpha" is alpha set on the graphics state. It is *not* alpha
from SMasks (that is, images with per-pixel alpha use per-pixel alpha
even with this setting unchecked).

--- a/Meta/Lagom/Contrib/MacPDF/MainMenu.xib
+++ b/Meta/Lagom/Contrib/MacPDF/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="22505" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="23727" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="22505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="23727"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -686,6 +686,12 @@
                                 <modifierMask key="keyEquivalentModifierMask"/>
                                 <connections>
                                     <action selector="toggleClipText:" target="-1" id="qxg-tH-KXd"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Use Constant Alpha" state="on" id="DXr-ru-y6D">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <connections>
+                                    <action selector="toggleUseConstantAlpha:" target="-1" id="jSg-GC-40X"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Show Images" state="on" id="ArW-nr-ktv">
